--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "D:\\ProgramData\\Anaconda3\\python.exe"
+    "python.pythonPath": "D:\\ProgramData\\Anaconda3\\python.exe",
+    "python.linting.pylintEnabled": false
 }
